src/test/ui/macros/macro-path-prelude-fail-3.rs
#[derive(inline)] //~ ERROR cannot find derive macro `inline` in this scope
struct S;

fn main() {
    inline!(); //~ ERROR cannot find macro `inline!` in this scope
}
